Finalizado de linkeo con DOM y agregado de funciones pertinentes. APP funcional.

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                     Por favor, seleccioná la opción que más se adecúa a tu estilo de vida.<br>
                     <select name="activitymultiplierinput" id="activitymultiplierinput" required>
                         <option selected disabled>Seleccionar</option>
-                        <option value="">Sedentario</option>
-                        <option value="">Levemente activo</option>
-                        <option value="">Medianamente activo</option>
-                        <option value="">Considerablemente activo</option>
-                        <option value="">Extremadamente activo</option>
-                        <p id="results"></p>
+                        <option value="1.2">Sedentario</option>
+                        <option value="1.375">Levemente activo</option>
+                        <option value="1.55">Medianamente activo</option>
+                        <option value="1.725">Considerablemente activo</option>
+                        <option value="1.9">Extremadamente activo</option>
                     </select>
                 </label>
                 <button type="submit" id="calcular">Calcular.</button>
             </form>
+            <p id="results">hola</p>
         </div>
     </section>
     <script src="https://kit.fontawesome.com/8898244d6b.js" crossorigin="anonymous"></script>
