--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                 </label>
                 <button type="submit" id="calcular">Calcular.</button>
             </form>
-            <p id="results">hola</p>
+            <p id="results"></p>
         </div>
     </section>
     <script src="https://kit.fontawesome.com/8898244d6b.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
