--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Calorías</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <p>Kcalc.</p>
-    </header>
     <button id="darkModeToggle" type="button" aria-label="toggle dark mode"><i id="darkModeToggleIcon" class="fa-solid fa-moon"></i></button>
     <section>
         <div class="calc-body">
-            <h1>Calculadora de Calorías.</h1>
+            <h1>CALCULADORA DE CALORIAS.</h1>
             <form id="form" action="">
                 <label>
                     Por favor, seleccioná la fórmula que quieras utilizar.<br>
@@ -54,7 +54,7 @@
                         <option value="1.9">Extremadamente activo</option>
                     </select>
                 </label>
-                <button type="submit" id="calcular">Calcular.</button>
+                <button type="submit" id="calcular">CALCULAR</button>
             </form>
             <p id="results"></p>
         </div>
