Agregado de box-shadows y retoques

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id="darkModeToggle" type="button" aria-label="toggle dark mode"><i id="darkModeToggleIcon" class="fa-solid fa-moon"></i></button>
     <section>
         <div class="calc-body">
-            <h1>CALCULADORA DE CALORIAS.</h1>
+            <h1>CALCULADORA DE CALORÍAS.</h1>
             <form id="form" action="">
                 <label>
                     Por favor, seleccioná la fórmula que quieras utilizar.<br>
@@ -58,6 +58,7 @@
             </form>
             <p id="results"></p>
         </div>
+        <div class="filler"></div>
     </section>
     <script src="https://kit.fontawesome.com/8898244d6b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
