--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Calorías</title>
+    <meta name="description" content="Calculá tu Ritmo Metabólico Basal y Gasto Total Diario de Energía utilizando mpultiples fórmulas comprobadas.">
+    <meta name="keywords" content="BMR calculator,BMR,TDEE calculator,TDEE,calculadora de BMR,Calculadora de TDEE,Calorías,Calories,Calculadora de calorías,Gasto diario">
+    <link rel="shortcut icon" href="./assets/favicon-fuego.png" type="image/png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <button id="darkModeToggle" type="button" aria-label="toggle dark mode"><i id="darkModeToggleIcon" class="fa-solid fa-moon"></i></button>
